--- a/VS/AddVendor/view/frontend/templates/list.phtml
+++ b/VS/AddVendor/view/frontend/templates/list.phtml
@@ -1,4 +1,7 @@
-<?php foreach ($block->getVendorsCategoryProduct() as $vendor) : ?>
-    <span><strong><?php echo $block->escapeHtml($vendor->getName()) ?></strong></span>
-    <p><?php echo $vendor->getDescription() ?></p>
-<?php endforeach; ?>
+
+<?php if ($block->isActive()) : ?>
+    <?php foreach ($block->getVendors() as $vendor) : ?>
+        <span><strong><?php echo $block->escapeHtml($vendor->getName()) ?></strong></span>
+        <p><?php echo $vendor->getDescription() ?></p>
+    <?php endforeach; ?>
+<?php endif; ?>
