--- a/VS/AddVendor/view/frontend/templates/product.phtml
+++ b/VS/AddVendor/view/frontend/templates/product.phtml
@@ -1,11 +1,13 @@
-<strong><?php echo __('Vendor(s)'); ?></strong>
-<?php foreach ($block->getVendors() as $vendor) : ?>
-    <div class = "row">
-    <div class = "col-sm-6 col-md-3">
-    <div class = "thumbnail">
-        <img src = "<?php echo $block->getImageUrl($vendor->getIcon()); ?>" alt = "<?php echo $vendor->getName(); ?>" style="max-height: 50px; max-width: 50px;">
-    </div>
-    </div>
-    </div>
-
-<?php endforeach; ?>
+<?php if ($block->isActive()) : ?>
+    <strong><?php echo __('Vendor(s)'); ?></strong>
+    <?php foreach ($block->getVendors() as $vendor) : ?>
+        <div class="row">
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <img class="vendor-icon" src="<?php echo $block->getImageUrl($vendor->getIcon()); ?>"
+                         alt="<?php echo $vendor->getName(); ?>">
+                </div>
+            </div>
+        </div>
+    <?php endforeach; ?>
+<?php endif; ?>
