--- a/VS/AddVendor/view/adminhtml/layout/vs_addvendor_vendor_new.xml
+++ b/VS/AddVendor/view/adminhtml/layout/vs_addvendor_vendor_new.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" ?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <update handle="vs_addvendor_vendor_edit"/>
 </page>
